# serdes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exception.h  file_monite.h  serdes.h
example/: CMakeLists.txt  definition.cpp  definition.h  main.cpp  simple.cpp
serdes/: config.h  multi_serdes.hpp  serdes.hpp  struct_serdes.hpp
serdes/json/: json_api.hpp  json_serdes.hpp
serdes/protobuf/: protobuf_api.hpp  protobuf_define_serdes.hpp  protobuf_serdes.hpp  protobuf_type.hpp
serdes/toml/: toml_api.hpp  toml_serdes.hpp
serdes/yaml/: yaml_api.hpp  yaml_serdes.hpp
test/: basic_test.cpp  common.cpp  common.h  list_test.cpp  macro.h  main.cpp  map_test.cpp  mix_test.cpp  parameter_type_test.cpp  set_test.cpp  test_curd.cpp  test_traits.cpp  vector_test.cpp
types/: basic.hpp  basic_impl.hpp  composite.hpp  composite_impl.hpp  enum.hpp  enum_impl.hpp  map.hpp  map_key.hpp  object.hpp  parameter.hpp  parameter_tree.hpp  pointer.hpp  prototype.hpp  registrar.hpp  sequence.hpp  set.hpp  traits.hpp
types/extension/: buffer.hpp  envar.hpp
utils/: base64.hpp  converter.h  converter.hpp  exception.hpp  file_monite.h  utils.hpp
validator/: validator.hpp
